--- a/styles/molecules/div-group-team.css
+++ b/styles/molecules/div-group-team.css
@@ -1,5 +1,7 @@
 .div-group-team{
+    margin-top: 3rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
