--- a/styles/protons/img.css
+++ b/styles/protons/img.css
@@ -1,4 +1,25 @@
 .pic{
-    width: 11rem;
-    margin: 0 0.5rem 0.9rem 0;
+    width: 10rem;
+    margin: 0 0.3rem 0.9rem 0;
+}
+
+@media only screen and (min-width: 470px){
+    .pic{
+        width: 12rem;
+        margin: 0 0.3rem 0.9rem 0;
+    }
+}
+
+@media only screen and (min-width: 770px){
+    .pic{
+        width: 14rem;
+        margin: 0 0.3rem 0.9rem 0;
+    }
+}
+
+@media only screen and (min-width: 1024px){
+    .pic{
+        width: 17rem;
+        margin: 0 0.3rem 0.9rem 0;
+    }
 }
