--- a/styles/protons/span.css
+++ b/styles/protons/span.css
@@ -1,6 +1,3 @@
 .span--transform{
-    transform: rotate(90deg);
-    position: absolute;
-    margin-top: 3rem;
-    margin-left: 8rem;
+    writing-mode: vertical-rl;
 }
