--- a/styles/protons/texts.css
+++ b/styles/protons/texts.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2? family= Montserrat:wght@500;700 & family= PT+Serif:wght@700 & family= Poppins:wght@400;600 & mostrar=intercambiar');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=PT+Serif:wght@700&family=Poppins:wght@400;600&display=swap');
 
 :root{
     --montserrat: 'Montserrat', sans-serif;
@@ -31,7 +31,7 @@
 }
 
 .txt--xl{
-    font-size: 2.6rem;
+    font-size: 2.8rem;
 }
 
 .txt--normal{
@@ -54,10 +54,10 @@
     text-align: center;
 }
 
-.line-height--s{
-    line-height: 1.5rem;
+.line--height{
+    line-height: 1.4rem;
 }
 
-.line-height--m{
-    line-height: 4rem;
+.txt--spacing{
+    letter-spacing: -0.15rem;
 }
