--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,19 @@
 html{
     font-size: 14px;
 }
+
+body{
+    padding: 5%;
+}
+
+@media only screen and (min-width: 770px){
+    body{
+        padding: 8%;
+    }
+}
+
+@media only screen and (min-width: 1024px){
+    body{
+        padding: 8% 15%;
+    }
+}
