--- a/styles/molecules/footer.css
+++ b/styles/molecules/footer.css
@@ -5,3 +5,9 @@
     flex-direction: column;
     align-items: center;
 }
+
+@media only screen and (min-width: 770px){
+    .footer{
+        position: absolute;
+    }
+}
