--- a/styles/molecules/div-group-team.css
+++ b/styles/molecules/div-group-team.css
@@ -1,5 +1,5 @@
 .div-group-team{
-    margin-top: 3rem;
+    margin: 3rem 0 5rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
